debugging client build, finished implementation

--- a/Dockerfile.client
+++ b/Dockerfile.client
@@ -1,28 +1,22 @@
 FROM node:current-alpine as build
 
-RUN apk add --no-cache protoc
-
 WORKDIR /app
 
-ENV protoc_gen_grpc_web=./node_modules/.bin/protoc-gen-grpc-web
-
+RUN apk add --no-cache protoc
+RUN npm install -g protoc-gen-ts
 COPY ./client/package*.json .
 
 RUN npm install
 
-COPY ./proto/app.proto .
+COPY ./proto/machine.proto .
 
-
-RUN mkdir -p ./src/proto
-RUN protoc -I=. app.proto \
-  --plugin=protoc-gen-grpc-web=${protoc_gen_grpc_web} \
-  --js_out=import_style=commonjs:./src \
-  --grpc-web_out=import_style=typescript,mode=grpcwebtext:./src
+COPY ./client . 
+RUN protoc -I=. --plugin=./node_modules/.bin/protoc-gen-ts_proto --ts_opt=unary_rpc_promise=true --ts_opt=target=web --ts_proto_opt=esModuleInterop=true --ts_out=./src machine.proto
 
 
 COPY ./client . 
 
-RUN npm run build
+#RUN npm run build
 
 EXPOSE 8081
 CMD ["npm", "run", "preview"]
