--- a/client/package.json
+++ b/client/package.json
@@ -10,15 +10,24 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@react-google-maps/api": "^2.20.6",
+    "-": "^0.0.1",
+    "@types/leaflet": "^1.9.17",
+    "google-protobuf": "^3.21.2",
     "grpc-web": "^1.5.0",
+    "leaflet": "^1.9.4",
+    "protoc-gen-grpc-web": "^1.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "google-protobuf": "^3.21.2",
-    "protoc-gen-grpc-web": "^1.4.1"
+    "react-leaflet": "^5.0.0",
+    "save": "^2.9.0",
+    "ts-proto": "^2.7.0",
+    "ts-protoc-gen": "^0.15.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
+    "@grpc/grpc-js": "^1.13.3",
+    "@types/google-protobuf": "^3.15.12",
+    "@types/node": "^22.15.16",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
