--- a/client/package.json
+++ b/client/package.json
@@ -13,23 +13,22 @@
     "-": "^0.0.1",
     "@types/leaflet": "^1.9.17",
     "google-protobuf": "^3.21.2",
-    "grpc-web": "^1.5.0",
     "leaflet": "^1.9.4",
-    "protoc-gen-grpc-web": "^1.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-leaflet": "^5.0.0",
     "save": "^2.9.0",
-    "ts-proto": "^2.7.0",
-    "ts-protoc-gen": "^0.15.0"
+    "ws": "^8.18.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
     "@grpc/grpc-js": "^1.13.3",
+    "@protobuf-ts/runtime-rpc": "^2.10.0",
     "@types/google-protobuf": "^3.15.12",
     "@types/node": "^22.15.16",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
+    "@types/ws": "^8.18.1",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.22.0",
     "eslint-plugin-react-hooks": "^5.2.0",
