--- a/Dockerfile.api
+++ b/Dockerfile.api
@@ -10,9 +10,10 @@ COPY ./api/package*.json .
 RUN npm install
 
 COPY ./proto/machine.proto .
+
 COPY ./api .
-RUN npx protoc --ts_out . --proto_path . machine.proto
+RUN npx protoc --ts_out ./src --proto_path . machine.proto
 RUN npm run build
 
 EXPOSE 8000
-CMD ["node", "index.js"]
+CMD ["node", "/app/src/index.js"]
