--- a/client/package.json
+++ b/client/package.json
@@ -11,20 +11,19 @@
   },
   "dependencies": {
     "-": "^0.0.1",
-    "@types/leaflet": "^1.9.17",
     "google-protobuf": "^3.21.2",
     "leaflet": "^1.9.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-leaflet": "^5.0.0",
-    "save": "^2.9.0",
-    "ws": "^8.18.2"
+    "save": "^2.9.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
     "@grpc/grpc-js": "^1.13.3",
     "@protobuf-ts/runtime-rpc": "^2.10.0",
     "@types/google-protobuf": "^3.15.12",
+    "@types/leaflet": "^1.9.17",
     "@types/node": "^22.15.16",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
